# swen

./: .dockerignore  .gitignore  .pre-commit-config.yaml  AGENTS.md  Makefile  README.md  docker-compose.yml  pyproject.toml  pyrightconfig.json  zensical.toml
.github/: PULL_REQUEST_TEMPLATE.md  (+1 more)
services/backend/: Dockerfile  pyproject.toml  pyrightconfig.json  pytest.ini
services/backend/src/swen_auth/: __init__.py  exceptions.py  schemas.py
services/backend/src/swen_auth/persistence/: __init__.py
services/backend/src/swen_auth/repositories/: __init__.py  password_reset_token_repository.py  user_credential_repository.py
services/backend/src/swen_auth/services/: __init__.py  jwt_service.py  password_service.py
services/backend/src/swen_config/: __init__.py  settings.py
services/backend/src/swen_demo/: __init__.py  data.py  seed.py
services/backend/src/swen_identity/: __init__.py  exceptions.py  schemas.py
services/backend/src/swen_identity/application/: __init__.py
services/backend/src/swen_identity/domain/: __init__.py
services/backend/src/swen_identity/infrastructure/: __init__.py
services/backend/src/swen_identity/presentation/: __init__.py
services/backend/src/swen_identity/repositories/: __init__.py  password_reset_token_repository.py  user_credential_repository.py
services/backend/src/swen_identity/services/: __init__.py  jwt_service.py  password_service.py
services/backend/tests/: README.md  conftest.py
services/backend/tests/cross_domain/: __init__.py  conftest.py
services/backend/tests/cross_domain/e2e/: __init__.py  conftest.py  test_bank_connection_journey.py  test_cash_transaction_journey.py  test_user_journeys.py
services/backend/tests/cross_domain/integration/: __init__.py  conftest.py  test_auth_endpoints.py  test_password_reset.py
services/backend/tests/integration/: README.md  conftest.py  manual_tan_test.py  test_geldstrom_integration.py
services/backend/tests/integration/ai/: __init__.py  conftest.py  test_ai_counter_account_integration.py  test_ai_e2e.py
services/backend/tests/integration/api/: __init__.py  conftest.py  test_accounts_endpoints.py  test_admin_endpoints.py  test_analytics_endpoints.py  test_auth_endpoints.py  test_credentials_endpoints.py  test_dashboard_endpoints.py  test_new_endpoints.py  test_sync_endpoints.py  test_transactions_endpoints.py
services/backend/tests/integration/cli/: __init__.py  test_dashboard_integration.py
services/backend/tests/integration/domain/: test_integration_services.py  test_opening_balance_integration.py
services/backend/tests/integration/persistence/: README.md  test_account_mapping_integration.py  test_credential_persistence_integration.py  test_persistence_integration.py  test_transaction_atomicity.py
services/backend/tests/integration/security/: __init__.py  test_user_data_isolation.py
services/backend/tests/integration/user/: __init__.py  test_user_preferences_behavior.py  test_user_repository.py
services/backend/tests/shared/: sse.py  sync_event_publisher.py  sync_streaming.py
services/backend/tests/shared/fixtures/: __init__.py  database.py  factories.py
services/backend/tests/swen/: __init__.py  conftest.py
services/backend/tests/swen/integration/: __init__.py  conftest.py
services/backend/tests/swen/unit/: __init__.py
services/backend/tests/swen_identity/: __init__.py  conftest.py
services/backend/tests/swen_identity/integration/: __init__.py  conftest.py
services/backend/tests/swen_identity/unit/: __init__.py
services/backend/tests/unit/application/: __init__.py
services/backend/tests/unit/domain/: __init__.py
services/backend/tests/unit/presentation/: __init__.py
services/backend/tests/unit/swen_auth/: __init__.py
services/contracts/: pyproject.toml
services/contracts/swen_ml_contracts/: __init__.py  accounts.py  classify.py  common.py  examples.py
services/ml/: Dockerfile  pyproject.toml
services/ml/swen_ml/: __init__.py
services/ml/swen_ml/api/: __init__.py  app.py  dependencies.py
services/ml/swen_ml/api/routes/: __init__.py  accounts.py  classify.py  examples.py  health.py  users.py
services/ml/swen_ml/config/: _utils.py  patterns.py  settings.py
services/ml/swen_ml/data_models/: __init__.py  anchor.py  enrichment.py  example.py  noise.py
services/ml/swen_ml/evaluation/: __init__.py  __main__.py  metrics.py  runner.py
services/ml/swen_ml/inference/: __init__.py  encoder.py  shared.py  similarity_classifier.py
services/ml/swen_ml/inference/_models/: __init__.py  nli.py
services/ml/swen_ml/inference/classification/: __init__.py  context.py  orchestrator.py  result.py  tiers.py
services/ml/swen_ml/inference/merchant_extraction/: __init__.py  extractor.py  orchestrator.py  patterns.py
services/ml/swen_ml/inference/recurring_detection/: __init__.py  detector.py  orchestrator.py
services/ml/swen_ml/models/: __init__.py  encoder.py
services/ml/swen_ml/pipeline/: __init__.py  orchestrator.py
services/ml/swen_ml/pipeline/tiers/: __init__.py  anchor.py  base.py  example.py  fallback.py  nli.py  pattern.py
services/ml/swen_ml/preprocessing/: __init__.py  merchant.py  noise_model.py  recurring.py
services/ml/swen_ml/storage/: __init__.py  anchor_store.py  cache.py  embedding_store.py  example_store.py  factory.py  noise_store.py  protocols.py
services/ml/swen_ml/storage/models/: anchor.py
services/ml/swen_ml/storage/repositories/: anchor.py  enrichment.py  example.py  noise.py
services/ml/swen_ml/storage/sqlalchemy/: __init__.py  engine.py  tables.py
services/ml/swen_ml/storage/utils/: db.py
services/ml/swen_ml/training/: __init__.py  account_embedding_service.py  example_embedding_service.py
services/ml/tests/: conftest.py
services/ml/tests/integration/: test_api.py  test_placeholder.py
services/ml/tests/unit/: test_embedding_store.py  test_encoder.py  test_placeholder.py
services/ml/tests/unit/pipeline/: test_context.py  test_keyword_enhancer.py  test_pattern_tier.py  test_pipeline.py  test_protocols.py  test_result.py
services/ml/tests/unit/text/: test_patterns.py  test_processor.py
(+1258 files in other folders)
