[tool.poetry]
name = "swen-backend"
version = "0.1.0"
description = "SWEN - Personal finance management backend"
authors = ["Malte Winckler <malte@nichts-ist-einfach.de>"]
packages = [
    { include = "swen", from = "src" },
    { include = "swen_identity", from = "src" },
    { include = "swen_config", from = "src" },
    { include = "swen_demo", from = "src" },
]

[tool.poetry.dependencies]
python = ">=3.10,<3.14"
python-dotenv = "^1.2.1"
pydantic = "^2.11.7"
sqlalchemy = "^2.0.42"
sqlmodel = "^0.0.24"
pydantic-settings = "^2.10.1"
PyYAML = "^6.0.2"
tenacity = "^9.1.2"
aiosqlite = "^0.21.0"
greenlet = "^3.3.0"
cryptography = "^46.0.3"
typer = {extras = ["all"], version = ">=0.20.0"}
rich = "^13.7.0"
geldstrom = { git = "https://github.com/maltewinckler/geldstrom.git", branch = "main"}
# Authentication (swen_auth)
bcrypt = "^4.0.0"
PyJWT = "^2.8.0"
# REST API
fastapi = "^0.115.0"
uvicorn = {extras = ["standard"], version = "^0.32.0"}
python-multipart = "^0.0.12"  # For form data support
email-validator = "^2.0.0"    # For Pydantic EmailStr
# Excel export
openpyxl = ">=3.1.0"
asyncpg = "^0.31.0"

[tool.poetry.scripts]
swen = "swen.presentation.cli.app:cli"
swen-api = "uvicorn:main"
# Database management
db-init = "swen.infrastructure.persistence.sqlalchemy.init_db:db_init"
db-drop = "swen.infrastructure.persistence.sqlalchemy.init_db:db_drop"
db-reset = "swen.infrastructure.persistence.sqlalchemy.init_db:db_reset"
# Demo data
seed-demo = "swen_demo.seed:main"

[tool.poetry.group.dev.dependencies]
pytest = ">=8.2,<9"
pytest-cov = "^4.0"
pytest-mock = "^3.10"
pytest-asyncio = ">=1.2"
ipykernel = ">=6.0"
httpx = "^0.28.1"
ruff = "^0.14.10"
pyright = "^1.1.391"
pre-commit = "^4.5.1"
detect-secrets = "^1.5.0"
testcontainers = { extras = ["postgres"], version = "^4.0" }

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ['py38']
exclude = '''
(\.ipynb$|\.venv/|__pycache__/)
'''

[tool.ruff]
line-length = 88

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    "A002",  # id redefines python-internal id() which is fine
    "ANN",  # Type annotations (handled by pyright)
    "UP",
    "TRY",
    "BLE",  # blind exceptions
    "TC",  # typechecking blocks
    "FBT",
    "T201",  # allow print (for debugging)
    "SIM103",  # weird if then else special case
    "PLR2004",  # never use numbers in comparisons
    "RUF022",  # __all__ should be ordered as user wants
    "FURB157",  # allow Decimal("0")
    "SIM112",
    "DTZ011",
    "SLF001",  # unit tests ignore private member access
    "PT028",  # allow defaults for specific functions
    "B008",  # important for typer cli layer
    # TODO comments are fine during development
    "TD002",  # Missing author in TODO
    "TD003",  # Missing issue link for TODO
    "FIX002",  # Line contains TODO
    # Docstring rules - keep NumPy style checks but ignore some strict ones
    "D100",  # Missing docstring in public module
    "D102",  # Missing docstring in public method (too strict for simple methods)
    "D104",  # Missing docstring in public package
    "D105",  # Missing docstring in magic method
    "D106",  # Missing docstring in public nested class
    "D107",  # Missing docstring in __init__
    "D203",  # 1 blank line required before class docstring (conflicts with D211)
    "D212",  # Multi-line docstring summary should start at first line (conflicts with D213)
    "D401",  # First line should be in imperative mood (too strict)
    "COM812",  # Missing trailing comma (conflicts with formatter)
]
extend-select = ["E501"]

[tool.ruff.lint.pydocstyle]
convention = "numpy"

[tool.ruff.lint.per-file-ignores]
# API schemas: Field descriptions are intentionally verbose
"src/swen/presentation/api/schemas/*.py" = [
    "E501",     # Line too long (Field descriptions)
]
# Demo data: Intentional hardcoded values and complex seed logic
"src/swen_demo/*.py" = [
    "ERA001",   # Commented-out code (documentation/templates)
    "S105",     # Hardcoded password (demo only)
    "S311",     # Pseudo-random (demo only, not crypto)
    "C901",     # Too complex (demo seed is intentionally comprehensive)
    "PLR0912",  # Too many branches (demo seed)
    "PLR0915",  # Too many statements (demo seed)
]
# Config: Binding to all interfaces is intentional for containerized deployment
"src/swen_config/settings.py" = [
    "S104",     # Possible binding to all interfaces
]
# Identity: token_type field names trigger false positive password detection
"src/swen_identity/schemas.py" = [
    "S105",     # token_type field name
]
"src/swen_identity/services/jwt_service.py" = [
    "S106",     # token_type argument
]
"tests/**/*.py" = [
    "S101",     # assert is fine in tests
    "S105",     # Hardcoded passwords OK in tests
    "D",        # No docstrings required in tests
    "ARG001",   # Unused function arguments (pytest fixtures)
    "ARG002",   # Unused method arguments (pytest fixtures)
    "PLR0913",  # Too many arguments (common with many fixtures)
    "PLC0415",  # Import not at top level (sometimes needed for isolation)
    "E501",     # Line too long (test assertions can be verbose)
    "E402",     # Module level import not at top (conditional imports in tests)
    "N817",     # CamelCase imports (TC for TestClient is fine)
    "EM101",    # String literals in exceptions OK in tests
    "SIM102",   # Nested if statements sometimes clearer in tests
    "ERA001",   # Commented code OK in tests for documentation
    "A001",     # Variable shadowing builtins OK in tests (e.g., credits)
    "RUF100",   # Unused noqa (can happen during refactoring)
    "F841",     # Local variable assigned but never used (setup for tests)
    "PT012",    # pytest.raises with multiple statements (sometimes needed)
    "PERF203",  # try-except in loop (acceptable in tests)
    "B017",     # assert blind exception (testing error paths)
    "PT011",    # pytest.raises too broad (acceptable in some tests)
    "S106",     # Possible hardcoded password (test data)
    "PERF401",  # Use list comprehension (clarity over performance in tests)
    "RUF043",   # Unnecessary tuple in exception handler
    "PGH003",   # Use specific rule codes for type: ignore
    "E741",     # Ambiguous variable name (l, O, I) - sometimes needed in tests
    "PLW0603",  # Global statement (sometimes needed in test fixtures)
    "INP001",   # Implicit namespace package (tests don't need __init__.py)
    "RUF015",   # Prefer next() over [0] (clarity in tests)
    "DTZ003",   # datetime.utcnow() deprecated (will fix separately)
    "A006"      # Lambda shadowing builtins
]
