[project]
name = "swen-ml-contracts"
version = "0.1.0"
description = "Shared API contracts between SWEN services"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.5.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["swen_ml_contracts"]

[tool.pyright]
pythonVersion = "3.11"
typeCheckingMode = "strict"
